fix: vertical scrollbar on page in Vertical view in IE and FF

--- a/TelerikMvcWebMail/Content/common.scss
+++ b/TelerikMvcWebMail/Content/common.scss
@@ -22,9 +22,13 @@ body {
     flex-direction: column;
     margin: 0;
     padding-top: 61px;
-    font: 14px/1 Segoe UI, 'Roboto', Myriad Pro, sans-serif;
+    font: 14px/1.42857143 Segoe UI, 'Roboto', Myriad Pro, sans-serif;
     color: #787878;
     overflow: visible;
+}
+
+input {
+    font: inherit;
 }
 
 a {
@@ -52,6 +56,10 @@ p {
 
 .k-tooltip-button {
     display: none;
+}
+
+body > div:last-child {
+    flex: none;
 }
 
 
